// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Compontests test Footer 1`] = `
<footer>
  <p
    className="footerP"
  >
    © decathlon.com
  </p>
</footer>
`;

exports[`Test Compontests test Header 1`] = `
<header
  className="header"
>
  <a
    className="link"
    href="/"
    onClick={[Function]}
  />
  <p
    className="headerHeading"
  >
    header Heading
  </p>
  <div
    className="headerSide"
  >
    <svg
      className="sideIcon"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M12 15c1.66 0 2.99-1.34 2.99-3L15 6c0-1.66-1.34-3-3-3S9 4.34 9 6v6c0 1.66 1.34 3 3 3zm5.3-3c0 3-2.54 5.1-5.3 5.1S6.7 15 6.7 12H5c0 3.42 2.72 6.23 6 6.72V22h2v-3.28c3.28-.48 6-3.3 6-6.72h-1.7z"
      />
    </svg>
    <svg
      className="sideIcon"
      fill="none"
      height="1em"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <desc />
      <path
        d="M0 0h24v24H0z"
        fill="none"
        stroke="none"
      />
      <path
        d="M10.325 4.317c.426 -1.756 2.924 -1.756 3.35 0a1.724 1.724 0 0 0 2.573 1.066c1.543 -.94 3.31 .826 2.37 2.37a1.724 1.724 0 0 0 1.065 2.572c1.756 .426 1.756 2.924 0 3.35a1.724 1.724 0 0 0 -1.066 2.573c.94 1.543 -.826 3.31 -2.37 2.37a1.724 1.724 0 0 0 -2.572 1.065c-.426 1.756 -2.924 1.756 -3.35 0a1.724 1.724 0 0 0 -2.573 -1.066c-1.543 .94 -3.31 -.826 -2.37 -2.37a1.724 1.724 0 0 0 -1.065 -2.572c-1.756 -.426 -1.756 -2.924 0 -3.35a1.724 1.724 0 0 0 1.066 -2.573c-.94 -1.543 .826 -3.31 2.37 -2.37c1 .608 2.296 .07 2.572 -1.065z"
      />
      <circle
        cx="12"
        cy="12"
        r="3"
      />
    </svg>
  </div>
</header>
`;

exports[`Test Compontests test Header 2`] = `
<div
  className="container"
>
  <header
    className="header"
  >
    <a
      className="link"
      href="/"
      onClick={[Function]}
    />
    <p
      className="headerHeading"
    >
      Sports
    </p>
    <div
      className="headerSide"
    >
      <svg
        className="sideIcon"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 15c1.66 0 2.99-1.34 2.99-3L15 6c0-1.66-1.34-3-3-3S9 4.34 9 6v6c0 1.66 1.34 3 3 3zm5.3-3c0 3-2.54 5.1-5.3 5.1S6.7 15 6.7 12H5c0 3.42 2.72 6.23 6 6.72V22h2v-3.28c3.28-.48 6-3.3 6-6.72h-1.7z"
        />
      </svg>
      <svg
        className="sideIcon"
        fill="none"
        height="1em"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <desc />
        <path
          d="M0 0h24v24H0z"
          fill="none"
          stroke="none"
        />
        <path
          d="M10.325 4.317c.426 -1.756 2.924 -1.756 3.35 0a1.724 1.724 0 0 0 2.573 1.066c1.543 -.94 3.31 .826 2.37 2.37a1.724 1.724 0 0 0 1.065 2.572c1.756 .426 1.756 2.924 0 3.35a1.724 1.724 0 0 0 -1.066 2.573c.94 1.543 -.826 3.31 -2.37 2.37a1.724 1.724 0 0 0 -2.572 1.065c-.426 1.756 -2.924 1.756 -3.35 0a1.724 1.724 0 0 0 -2.573 -1.066c-1.543 .94 -3.31 -.826 -2.37 -2.37a1.724 1.724 0 0 0 -1.065 -2.572c-1.756 -.426 -1.756 -2.924 0 -3.35a1.724 1.724 0 0 0 1.066 -2.573c-.94 -1.543 .826 -3.31 2.37 -2.37c1 .608 2.296 .07 2.572 -1.065z"
        />
        <circle
          cx="12"
          cy="12"
          r="3"
        />
      </svg>
    </div>
  </header>
  <div
    className="mainDiv"
  >
    <div
      className="showcaseDiv"
    >
      <div
        className="showcaseImg"
      >
        <img
          alt="showcase"
          src="https://sports-api-production.s3.amazonaws.com/uploads/sport/icon/224/224.svg"
        />
      </div>
      <div
        className="showcaseDetails"
      >
        <p>
          SPORTS
        </p>
        <span>
          0
            games
        </span>
      </div>
    </div>
    <p
      className="heading"
    >
      SPORTS BY GROUP
    </p>
    <form
      onSubmit={[Function]}
    >
      <input
        className="formInput"
        name="textValue"
        onChange={[Function]}
        placeholder="Search..."
        type="text"
        value=""
      />
    </form>
    <div
      className="missing"
    >
      <p>
        No such game available
      </p>
    </div>
  </div>
  <footer>
    <p
      className="footerP"
    >
      © decathlon.com
    </p>
  </footer>
</div>
`;

exports[`Test Compontests test Sports 1`] = `
Array [
  <header
    className="header"
  >
    <a
      className="link"
      href="/"
      onClick={[Function]}
    />
    <p
      className="headerHeading"
    >
      Sports
    </p>
    <div
      className="headerSide"
    >
      <svg
        className="sideIcon"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 15c1.66 0 2.99-1.34 2.99-3L15 6c0-1.66-1.34-3-3-3S9 4.34 9 6v6c0 1.66 1.34 3 3 3zm5.3-3c0 3-2.54 5.1-5.3 5.1S6.7 15 6.7 12H5c0 3.42 2.72 6.23 6 6.72V22h2v-3.28c3.28-.48 6-3.3 6-6.72h-1.7z"
        />
      </svg>
      <svg
        className="sideIcon"
        fill="none"
        height="1em"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <desc />
        <path
          d="M0 0h24v24H0z"
          fill="none"
          stroke="none"
        />
        <path
          d="M10.325 4.317c.426 -1.756 2.924 -1.756 3.35 0a1.724 1.724 0 0 0 2.573 1.066c1.543 -.94 3.31 .826 2.37 2.37a1.724 1.724 0 0 0 1.065 2.572c1.756 .426 1.756 2.924 0 3.35a1.724 1.724 0 0 0 -1.066 2.573c.94 1.543 -.826 3.31 -2.37 2.37a1.724 1.724 0 0 0 -2.572 1.065c-.426 1.756 -2.924 1.756 -3.35 0a1.724 1.724 0 0 0 -2.573 -1.066c-1.543 .94 -3.31 -.826 -2.37 -2.37a1.724 1.724 0 0 0 -1.065 -2.572c-1.756 -.426 -1.756 -2.924 0 -3.35a1.724 1.724 0 0 0 1.066 -2.573c-.94 -1.543 .826 -3.31 2.37 -2.37c1 .608 2.296 .07 2.572 -1.065z"
        />
        <circle
          cx="12"
          cy="12"
          r="3"
        />
      </svg>
    </div>
  </header>,
  <div
    className="mainDiv"
  >
    <div
      className="showcaseDiv"
    >
      <div
        className="showcaseImg"
      >
        <img
          alt="showcase"
          src="https://sports-api-production.s3.amazonaws.com/uploads/sport/icon/224/224.svg"
        />
      </div>
      <div
        className="showcaseDetails"
      >
        <p>
          SPORTS
        </p>
        <span>
          0
            games
        </span>
      </div>
    </div>
    <p
      className="heading"
    >
      SPORTS BY GROUP
    </p>
    <form
      onSubmit={[Function]}
    >
      <input
        className="formInput"
        name="textValue"
        onChange={[Function]}
        placeholder="Search..."
        type="text"
        value=""
      />
    </form>
    <div
      className="missing"
    >
      <p>
        No such game available
      </p>
    </div>
  </div>,
  <footer>
    <p
      className="footerP"
    >
      © decathlon.com
    </p>
  </footer>,
]
`;
